--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	/* background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%); */
+	background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+}
+
 .App {
-  text-align: center;
+	height: 100vh;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-wrapper {
+	width: 40%;
+	background-color: white;
+	box-shadow: 0px 0px 6px 1px rgb(226, 226, 226);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form {
+	width: 100%;
+	margin: 2em auto;
+	text-align: left;
+	padding: 2em 4em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#name,
+#email,
+#contact,
+#message {
+	width: 100%;
+	margin: 1.25em auto;
+	border: none;
+	border-bottom: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+#name:focus,
+#email:focus,
+#contact:focus,
+#message:focus {
+	outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label {
+	display: inline-block;
+	margin: 0.5em 0em;
+	margin-right: 0.5em;
+}
+
+.btn {
+	margin-top: 2em;
+	margin-bottom: 0em;
+	background-color: white;
+	padding: 1em 2em;
+	border: 1px solid black;
+	transition: all 0.3s ease;
+}
+
+.btn:hover {
+	background-color: black;
+	color: white;
 }
