--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,23 @@ label {
 	background-color: black;
 	color: white;
 }
+
+@media (max-width: 1070px) {
+	.form-wrapper {
+		width: 60%;
+	}
+}
+@media (max-width: 900px) {
+	.form-wrapper {
+		width: 80%;
+	}
+}
+@media (max-width: 400px) {
+	.form-wrapper {
+		width: 100%;
+	}
+
+	form {
+		padding: 1em 2em;
+	}
+}
